editing the admin panel in a single style, adding indexes